2003-02-17  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/scripts/conch.py: Added experimental support for connection
	caching, where if a connection is already available to a server, the
	client will multiplex another session over the existing connection,
	rather that creating a new one.

2003-02-16  Jp Calderone  <exarkun@twistedmatrix.com>

	* doc/examples/echoserv.py: Rewrote main code to not create a .tap
	file (examples should be simple, and demonstrate as few things as
	possible each).

	* doc/examples/echoclient.py: Added UDP echo protocol
	implementation; it is unused by default, but easily enabled.

2003-02-16  Cory Dodt  <corydodt@yahoo.com>
    
	* twisted/lore/{latex,default}.py: provide a --config book option 
	to Lore, for producing book-level documents from an index page.

2003-02-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/scripts/mktap.py, twisted/scripts/twistd.py: Added the
	--appname and --originalname parameters, respectively.

	* twisted/doc/man/mktap.py, twisted/doc/man/twistd.py: Documented
	the above two new parameters.

2003-02-12  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/python/text.py (docstringLStrip): 1.6 This will be going
	away in favor of inspect.getdoc.

2003-02-11  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/im/interfaces.py (IAccount): 1.4 New instance attribute:
	"client".  Also, added methods getGroup and getPerson.

	* twisted/im/basechat.py (ChatUI.getPerson, .getGroup): 1.7 No
	longer accept a Class parameter.  The class of the person/group is
	determined by the account they are obtained through.

	* twisted/im/basesupport.py (AbstractPerson, AbstractGroup): 1.15
	Hold a reference to account, not client.  Also, lose the "chatui"
	parameter -- this may require follow-up.
	(AbstractAccount.__setstate__): 1.15 remove this method.  (Why
	was self.port = int(self.port) in __setstate__?)
	(AbstractAccount): 1.15 implement getGroup and getPerson here,