@@ -1,3 +1,9 @@
+2003-2-18  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/server.py twisted/protocols/http.py: Add a way for
+	resources (and other interested parties) to know when a request has
+	finished, for normal or abnormal reasons.
+
 2003-02-17  Paul Swartz  <z3p@twistedmatrix.com>
 
 	* twisted/scripts/conch.py: Added experimental support for connection
